implemented first html and css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
   <meta charset="utf-8">
   <title>Color Flipper</title>
   <link rel="stylesheet" href="./css/styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Trispace:wght@400;700&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header id="nav">
+    <div class="nav-left">
+      <h1>Color Flipper</h1>
+    </div>
+    <div class="nav-right">
+      <h2>Simple</h2>
+      <h2>Hex</h2>
+    </div>
+  </header>
 
+  <main id="main">
+    <div class="wrapper">
+      <h2 id="background-color">Background Color: <span>#F1f5f8</span></h2>
+    </div>
+    <button class="click">
+      CLICK ME
+    </button>
+  </main>
 
   <script src="./app.js" charset="utf-8"></script>
 
