--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <main id="main">
     <div class="wrapper">
-      <h2 id="background-color">Background Color: <span>#F1f5f8</span></h2>
+      <h2 class="background-color-text">Background Color: <span>#F1f5f8</span></h2>
     </div>
     <button class="click">
       CLICK ME
