#main display flex changed to col

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     <div class="wrapper">
       <h2 class="background-color-text">Background Color: <span>#F1f5f8</span></h2>
     </div>
-    <button class="click">
-      CLICK ME
-    </button>
+    <div class="buttonwrap">
+      <button class="click">
+        CLICK ME
+      </button>
+    </div>
   </main>
 
   <script src="./app.js" charset="utf-8"></script>
