using 2 js files now, simple + hex

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </main>
 
-  <script src="./app.js" charset="utf-8"></script>
+  <script src="./script.js" charset="utf-8"></script>
 
 </body>
 </html>
