js for simple flipper

--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
 
   <main id="main">
     <div class="wrapper">
-      <h2 class="background-color-text">Background Color: <span>#F1f5f8</span></h2>
+      <h2 class="background-color-text">Background Color: <span class="color-name">#F1f5f8</span></h2>
     </div>
     <div class="buttonwrap">
-      <button class="click">
+      <button id="btn">
         CLICK ME
       </button>
     </div>
   </main>
 
-  <script src="./script.js" charset="utf-8"></script>
+  <script src="./simple.js" charset="utf-8"></script>
+  <script src="./hex.js" charset="utf-8"></script>
 
 </body>
 </html>
