--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
   </main>
 
-  <script src="./simple.js" charset="utf-8"></script>
-  <script src="./hex.js" charset="utf-8"></script>
+  <script src="./script.js" charset="utf-8"></script>
+  <!-- <script src="./hex.js" charset="utf-8"></script> -->
 
 </body>
 </html>
