--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h1>Color Flipper</h1>
     </div>
     <div class="nav-right">
-      <h2>Simple</h2>
-      <h2>Hex</h2>
+      <h2><a href="" class="simple">Simple</a></h2>
+      <h2><a href="" class="hex">Hex</a></h2>
     </div>
   </header>
 
