changed nav-right to ul and lis

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <h1>Color Flipper</h1>
     </div>
     <div class="nav-right">
-      <h2><a href="" class="simple">Simple</a></h2>
-      <h2><a href="" class="hex">Hex</a></h2>
+      <ul>
+        <li><a href="" class="simple">Simple</a></li>
+        <li><a href="" class="hex">Hex</a></li>
+      </ul>
     </div>
   </header>
 
