--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     </div>
     <div class="nav-right">
       <ul>
-        <li><a href="" class="simple">Simple</a></li>
-        <li><a href="" class="hex">Hex</a></li>
+        <!-- <li><a href="" class="simple">Simple</a></li>
+        <li><a href="" class="hex">Hex</a></li> -->
+        <li><button class="switch">Simple</button></li>
+        <li><button class="switch">Hex</button></li>
       </ul>
     </div>
   </header>
