--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <div class="nav-right">
       <ul>
-        <li><button class="switch">Simple</button></li>
-        <li><button class="switch">Hex</button></li>
+        <li><button class="switchSimple">Simple</button></li>
+        <li><button class="switchHex">Hex</button></li>
       </ul>
     </div>
   </header>
