changed simpleFlipper and hexFlipper to return values for colorButton

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
       <h1>Color Flipper</h1>
     </div>
     <div class="nav-right">
-      <ul>
-        <li><button class="switchSimple">Simple</button></li>
-        <li><button class="switchHex">Hex</button></li>
-      </ul>
+      <button class="switchSimple active">Simple</button>
+      <button class="switchHex">Hex</button>
     </div>
   </header>
 
@@ -27,7 +25,7 @@
       <h2 class="background-color-text">Background Color: <span class="color-name">#F1f5f8</span></h2>
     </div>
     <div class="buttonwrap">
-      <button id="btn">
+      <button class="click-me">
         CLICK ME
       </button>
     </div>
